[gd_scene load_steps=87 format=2]

[ext_resource path="res://Sprites enemigos/Zoro/Zoro inmovil1.png" type="Texture" id=1]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro salto1.png" type="Texture" id=2]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro inmovil2.png" type="Texture" id=3]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro inmovil3.png" type="Texture" id=4]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro salto2.png" type="Texture" id=5]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro salto3.png" type="Texture" id=6]
[ext_resource path="res://Sprites enemigos/Zoro/Zorro correr3.png" type="Texture" id=7]
[ext_resource path="res://Sprites enemigos/Zoro/Zorro correr1.png" type="Texture" id=8]
[ext_resource path="res://Sprites enemigos/Zoro/Zorro correr2.png" type="Texture" id=9]
[ext_resource path="res://Sprites enemigos/Zoro/Zorro correr4.png" type="Texture" id=10]
[ext_resource path="res://Sprites enemigos/Zoro/Zorro correr5.png" type="Texture" id=11]
[ext_resource path="res://Sprites enemigos/Zoro/Zorro correr6.png" type="Texture" id=12]
[ext_resource path="res://Sprites enemigos/Zoro/Zorro correr7.png" type="Texture" id=13]
[ext_resource path="res://Sprites enemigos/Zoro/Zorro correr8.png" type="Texture" id=14]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe ligero1.png" type="Texture" id=15]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe ligero3.png" type="Texture" id=16]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe ligero2.png" type="Texture" id=17]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe ligero4.png" type="Texture" id=18]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe ligero5.png" type="Texture" id=19]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe ligero6.png" type="Texture" id=20]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe ligero7.png" type="Texture" id=21]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe ligero8.png" type="Texture" id=22]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe fuerte2.png" type="Texture" id=23]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe fuerte1.png" type="Texture" id=24]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe fuerte4.png" type="Texture" id=25]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe fuerte3.png" type="Texture" id=26]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro golpe fuerte5.png" type="Texture" id=27]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro agachado1.png" type="Texture" id=28]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro agachado2.png" type="Texture" id=29]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo ligero2.png" type="Texture" id=30]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo ligero1.png" type="Texture" id=31]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo ligero5.png" type="Texture" id=32]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo ligero3.png" type="Texture" id=33]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo ligero4.png" type="Texture" id=34]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo ligero6.png" type="Texture" id=35]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo ligero7.png" type="Texture" id=36]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo ligero8.png" type="Texture" id=37]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo ligero9.png" type="Texture" id=38]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo saltando2.png" type="Texture" id=39]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo saltando1.png" type="Texture" id=40]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo saltando4.png" type="Texture" id=41]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo saltando6.png" type="Texture" id=42]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo saltando3.png" type="Texture" id=43]
[ext_resource path="res://Sprites enemigos/Zoro/Zoro combo saltando5.png" type="Texture" id=44]
[ext_resource path="res://Enemigo.gd" type="Script" id=45]

[sub_resource type="RectangleShape2D" id=42]
extents = Vector2( 52.3813, 3.83865 )

[sub_resource type="Animation" id=1]
resource_name = "Agachado"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0874301 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 28 ), ExtResource( 29 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -11.9049, -1.91443 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Animaciones:pause_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0886089 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/Colision_cuerpo:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0848846, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.7 ), Vector2( 1, 0.7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area2D/Colision_cuerpo:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.0833907, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.16429, 15.0714 ), Vector2( 5.91347, 39.0443 ), Vector2( 5.16429, 39.0443 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Ataque combo"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0707767, 0.144329, 0.235922, 0.310862, 0.370537, 0.456579, 0.566214, 0.675848 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 31 ), ExtResource( 30 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0707268, 0.14428, 0.144398, 0.235848, 0.235926, 0.310831, 0.310948, 0.370447, 0.370564, 0.45651, 0.456589 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8.90823, 8.57373 ), Vector2( -10.8752, 9.15971 ), Vector2( -19.2121, 8.7731 ), Vector2( 16.7861, 8.77248 ), Vector2( 13.8464, 9.04097 ), Vector2( -13.0997, 8.29076 ), Vector2( -12.6888, 8.3185 ), Vector2( -40.4068, 8.31854 ), Vector2( -37.687, 8.34058 ), Vector2( -60.1562, 8.34062 ), Vector2( -57.6535, 8.37245 ), Vector2( -22.4363, 6.87418 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Colision_cuerpo:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1.1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/Colision_cuerpo:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.75809, 8.67255 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("golpe/colision_golpe:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.243812, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Ataque fuerte"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0680811, 0.155431, 0.233147, 0.366374, 0.46213 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 24 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0679552, 0.0680724, 0.15539, 0.233078, 0.233156, 0.366313, 0.366391, 0.462078, 0.462156, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.32565, 25.0551 ), Vector2( 3.97482, 24.9959 ), Vector2( -25.2949, 22.7445 ), Vector2( -31.9098, 22.3139 ), Vector2( -28.6578, 22.27 ), Vector2( -9.9006, 21.522 ), Vector2( -10.2251, 23.8713 ), Vector2( 17.5097, 25.3718 ), Vector2( 17.014, 18.8616 ), Vector2( 4.26845, 1.61534 ), Vector2( 5.32562, 0.333054 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Colision_cuerpo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7.90294, 16.2005 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("golpe/colision_golpe:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.070927, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "Ataque ligero"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0305311, 0.0777156, 0.113798, 0.156819, 0.216494, 0.266454, 0.348333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.0304882, 0.0305272, 0.113708, 0.113786, 0.15674, 0.216411, 0.266464, 0.34825, 0.348367, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -9.33681, -13.0962 ), Vector2( 8.64546, -0.355186 ), Vector2( 5.95643, -0.555557 ), Vector2( -31.4738, -1.30701 ), Vector2( -30.5269, -1.04792 ), Vector2( -28.7231, -1.21457 ), Vector2( -31.9532, -0.0225983 ), Vector2( -29.9683, -1.32423 ), Vector2( 4.50323, 1.67305 ), Vector2( 10.3187, 1.26038 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Colision_cuerpo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.411392, 4.21402 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/Colision_cuerpo:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1.13 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("golpe/colision_golpe:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.118212, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "Correr"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0638378, 0.14988, 0.23731, 0.335843, 0.426048, 0.512091, 0.606459 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Golpe salto"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.131351, 0.297321, 0.4, 0.528744, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 40 ), ExtResource( 39 ), ExtResource( 43 ), ExtResource( 41 ), ExtResource( 44 ), ExtResource( 42 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cuerpo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.129063, 0.133227, 0.298373, 0.397224, 0.401068, 0.527356, 0.530531, 0.534295, 0.700828, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 15.6967, -4.85771 ), Vector2( 15.3325, -4.03002 ), Vector2( -6.55206, 2.55852 ), Vector2( -16.8872, 2.82516 ), Vector2( -19.6615, 3.34996 ), Vector2( 47.5809, -5.48688 ), Vector2( 51.5219, -5.33468 ), Vector2( 39.6739, -5.33085 ), Vector2( 63.4515, -4.28837 ), Vector2( 60.9131, -6.09863 ), Vector2( 60.9131, -6.09863 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Colision_cuerpo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 8.79419, 2.0088 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("golpe/colision_golpe:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.403397, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.108247, 0.223432 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Colision_cuerpo:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Colision_cuerpo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.99879, 16.9132 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.667603, -1.16528 ) ]
}

[sub_resource type="Animation" id=8]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.951132, 1.62764 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/Colision_cuerpo:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1.2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/Colision_cuerpo:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.636991 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.63637, -2.76308 ), Vector2( 11.1608, 3.5865 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cuerpo:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.92361, -2.73878 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Salto ligero"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Cuerpo:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Agachado"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Ataque combo"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Ataque fuerte"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Ataque fuerte"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Ataque ligero"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Correr"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Golpe salto"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Inmovil"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Salto"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Salto ligero"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=37]
states/Agachado/node = SubResource( 10 )
states/Agachado/position = Vector2( 494, 177 )
states/Ataquecombo/node = SubResource( 11 )
states/Ataquecombo/position = Vector2( 162, 177 )
states/Ataquefuerte/node = SubResource( 12 )
states/Ataquefuerte/position = Vector2( 93, 321 )
states/Ataquefuerte2/node = SubResource( 13 )
states/Ataquefuerte2/position = Vector2( 318, 581.772 )
states/Ataqueligero/node = SubResource( 14 )
states/Ataqueligero/position = Vector2( 177, 472 )
states/Correr/node = SubResource( 15 )
states/Correr/position = Vector2( 494, 492 )
states/Golpesalto/node = SubResource( 16 )
states/Golpesalto/position = Vector2( 732, 501.292 )
states/Inmovil/node = SubResource( 17 )
states/Inmovil/position = Vector2( 494, 321 )
states/Salto/node = SubResource( 18 )
states/Salto/position = Vector2( 732, 321 )
states/Saltoligero/node = SubResource( 19 )
states/Saltoligero/position = Vector2( 732, 412.292 )
transitions = [ "Inmovil", "Correr", SubResource( 20 ), "Correr", "Inmovil", SubResource( 21 ), "Inmovil", "Salto", SubResource( 22 ), "Salto", "Inmovil", SubResource( 23 ), "Inmovil", "Agachado", SubResource( 24 ), "Agachado", "Inmovil", SubResource( 25 ), "Inmovil", "Ataqueligero", SubResource( 26 ), "Ataqueligero", "Inmovil", SubResource( 27 ), "Ataquefuerte", "Inmovil", SubResource( 28 ), "Ataquecombo", "Inmovil", SubResource( 29 ), "Ataqueligero", "Ataquefuerte", SubResource( 30 ), "Ataquefuerte", "Ataquecombo", SubResource( 31 ), "Inmovil", "Ataquefuerte2", SubResource( 32 ), "Ataquefuerte2", "Inmovil", SubResource( 33 ), "Inmovil", "Saltoligero", SubResource( 34 ), "Saltoligero", "Golpesalto", SubResource( 35 ), "Golpesalto", "Inmovil", SubResource( 36 ) ]
start_node = "Inmovil"
graph_offset = Vector2( -95.7951, 58.754 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=38]

[sub_resource type="CapsuleShape2D" id=40]
radius = 48.6909
height = 67.8892

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 49.6004, 59.7758 )

[node name="Enemigo" type="KinematicBody2D" groups=[
"Enemigos",
]]
position = Vector2( 161.372, 160.949 )
scale = Vector2( -1, 1 )
script = ExtResource( 45 )

[node name="Colisiom" type="CollisionShape2D" parent="."]
position = Vector2( -5.76341, 92.5636 )
shape = SubResource( 42 )

[node name="Cuerpo" type="Sprite" parent="."]
position = Vector2( -0.667603, -1.16528 )
scale = Vector2( 3.05932, 3.05932 )
texture = ExtResource( 1 )

[node name="Animaciones" type="AnimationPlayer" parent="."]
pause_mode = 1
anims/Agachado = SubResource( 1 )
"anims/Ataque combo" = SubResource( 2 )
"anims/Ataque fuerte" = SubResource( 3 )
"anims/Ataque ligero" = SubResource( 4 )
anims/Correr = SubResource( 5 )
"anims/Golpe salto" = SubResource( 6 )
anims/Inmovil = SubResource( 7 )
anims/Salto = SubResource( 8 )
"anims/Salto ligero" = SubResource( 9 )

[node name="Arboldeanimaciones" type="AnimationTree" parent="."]
tree_root = SubResource( 37 )
anim_player = NodePath("../Animaciones")
active = true
parameters/playback = SubResource( 38 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Colision_cuerpo" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.99879, 16.9132 )
shape = SubResource( 40 )

[node name="golpe" type="Area2D" parent="." groups=[
"golpe_enemigo",
]]

[node name="colision_golpe" type="CollisionShape2D" parent="golpe"]
position = Vector2( 105, 3.498 )
shape = SubResource( 41 )
disabled = true

[node name="Tiempo" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="Eyes_right" type="RayCast2D" parent="."]
position = Vector2( -49.9939, 4.24417 )
enabled = true
cast_to = Vector2( -50, 0 )
collide_with_areas = true

[node name="Eyes_right2" type="RayCast2D" parent="."]
position = Vector2( -49.9939, 4.24417 )
enabled = true
cast_to = Vector2( -1000, 0 )
collide_with_areas = true

[node name="Eyes_left" type="RayCast2D" parent="."]
position = Vector2( 55.1073, 4.6137 )
enabled = true
cast_to = Vector2( 50, 0 )
collide_with_areas = true

[node name="Eyes_left2" type="RayCast2D" parent="."]
position = Vector2( 55.1073, 4.6137 )
enabled = true
cast_to = Vector2( 1000, 0 )
collide_with_areas = true

[node name="Cooldown_ataque" type="Timer" parent="."]
wait_time = 3.0
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Tiempo" to="." method="_on_Tiempo_timeout"]
[connection signal="timeout" from="Cooldown_ataque" to="." method="_on_Cooldown_ataque_timeout"]
